--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World!
+---
+layout: default
+---
+
+<section class="section">
+  <div class="container">
+    <h1 class="title">Installation</h1>
+    <p>
+      This is a library of extensions for the <a href="http://bulma.io">Bulma CSS framework</a>.
+    </p>
+  </div>
+</section>
