--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@ layout: default
     <p>
       This is a library of extensions for the <a href="http://bulma.io">Bulma CSS framework</a>.
     </p>
+    
+    {% include heading.html name="Problems?" %}
+
+    <div class="content">
+      <p>
+        Is some combinations of modifers giving you problems or look wrong? Please <a
+        href="https://github.com/aramvisser/bulma-steps/issues/new">create an issue on Github</a>
+        and I will take a look at it.
+      </p>
+    </div>
   </div>
 </section>
