--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="container">
     <h1 class="title">Installation</h1>
     <p>
-      This is a library of extensions for the <a href="http://bulma.io">Bulma CSS framework</a>.
+      This is a library of extensions for the <a href="http://bulma.io" target="_blank">Bulma CSS framework</a>.
     </p>
     
     {% include heading.html name="Problems?" %}
