--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ layout: default
       This is a library of extensions for the <a href="http://bulma.io" target="_blank">Bulma CSS framework</a>.
     </p>
     
-    {% include heading.html name="Problems?" %}
+    <h1 class="title">Problems ?</h1>
 
     <div class="content">
       <p>
-        Is some combinations of modifers giving you problems or look wrong? Please <a
-        href="https://github.com/aramvisser/bulma-steps/issues/new">create an issue on Github</a>
+        If you encounter any kind of problem please <a
+        href="https://github.com/Wikiki/bulma-extensions/issues/new">create an issue on Github</a>
         and I will take a look at it.
       </p>
     </div>
