--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@ layout: default
 
     <div class="content">
       <p>
-        If you encounter any kind of problem please <a
-        href="https://github.com/Wikiki/bulma-extensions/issues/new">create an issue on Github</a>
-        and I will take a look at it.
+        If you encounter any kind of problem please <a href="https://github.com/Wikiki/bulma-extensions/issues/new">create an issue on Github</a> and I will take a look at it.
       </p>
     </div>
   </div>
