--- a/bulma-extensions/index.html
+++ b/bulma-extensions/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Installation</h1>
+    <h1 class="title">Introduction</h1>
     <p>
       This is a library of extensions for the <a href="http://bulma.io" target="_blank">Bulma CSS framework</a>.
     </p>
