--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@ title: Wikiki
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Introduction</h1>
+    <h1 class="title has-text-centered">Wiki</h1>
     <p>
-      This is a library of extensions for the <a href="http://bulma.io" target="_blank">Bulma CSS framework</a>.
+      This page is an access point to my sources
     </p>
-
-    <h1 class="title">Problems ?</h1>
-    <div class="content">
-      <p>
-        If you encounter any kind of problem please <a href="https://github.com/Wikiki/bulma-extensions/issues/new">create an issue on Github</a> and I will take a look at it.
-      </p>
-    </div>
   </div>
 </section>
