--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ---
 layout: default
 title: Wikiki
+subtitle: This page is an access point to my sources
 ---
 
 <section class="section">
   <div class="container">
-    <h1 class="title has-text-centered">Wiki</h1>
+    <h1 class="title">Bulma's extensions</h1>
     <p>
-      This page is an access point to my sources
+
     </p>
   </div>
 </section>
