--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ subtitle: This page is an access point to my sources
 <section class="section">
   <div class="container">
     <h1 class="title">Bulma's extensions</h1>
-    
+    <h2 class="subtitle">Set of extensions for <a href="http://bulma.io" target="_blank">Bulma.io</a></h2>
   </div>
 </section>
