--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -1,6 +1,8 @@
 ---
 title: Calendar
-layout: documentation
+layout: default
 doc-tab: bulma-extensions
 doc-subtab: calendar
 ---
+
+{% include_relative subnav-bulma-extensions.html %}
