--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -1,6 +1,8 @@
 ---
 title: Checkradio
-layout: documentation
+layout: default
 doc-tab: bulma-extensions
 doc-subtab: checkradio
 ---
+
+{% include_relative subnav-bulma-extensions.html %}
