--- a/bulma-extensions/divider.html
+++ b/bulma-extensions/divider.html
@@ -1,6 +1,8 @@
 ---
 title: Divider
-layout: documentation
+layout: default
 doc-tab: bulma-extensions
 doc-subtab: divider
 ---
+
+{% include_relative subnav-bulma-extensions.html %}
