--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -1,8 +1,8 @@
 ---
-title: Switch
+title: Overview
 layout: default
 doc-tab: bulma-extensions
-doc-subtab: switch
+doc-subtab: overview
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
