--- a/bulma-extensions/pageloader.html
+++ b/bulma-extensions/pageloader.html
@@ -1,6 +1,8 @@
 ---
 title: Page loader
-layout: documentation
+layout: default
 doc-tab: bulma-extensions
 doc-subtab: pageloader
 ---
+
+{% include_relative subnav-bulma-extensions.html %}
