--- a/bulma-extensions/ribbon.html
+++ b/bulma-extensions/ribbon.html
@@ -1,6 +1,8 @@
 ---
 title: Ribbon
-layout: documentation
+layout: default
 doc-tab: bulma-extensions
 doc-subtab: ribbon
 ---
+
+{% include_relative subnav-bulma-extensions.html %}
