--- a/bulma-extensions/slider.html
+++ b/bulma-extensions/slider.html
@@ -1,6 +1,8 @@
 ---
 title: Slider
-layout: documentation
+layout: default
 doc-tab: bulma-extensions
 doc-subtab: slider
 ---
+
+{% include_relative subnav-bulma-extensions.html %}
