--- a/bulma-extensions/steps.html
+++ b/bulma-extensions/steps.html
@@ -1,6 +1,8 @@
 ---
 title: Steps
-layout: documentation
+layout: default
 doc-tab: bulma-extensions
 doc-subtab: steps
 ---
+
+{% include_relative subnav-bulma-extensions.html %}
