--- a/bulma-extensions/timeline.html
+++ b/bulma-extensions/timeline.html
@@ -1,6 +1,8 @@
 ---
 title: Timeline
-layout: documentation
+layout: default
 doc-tab: bulma-extensions
 doc-subtab: timeline
 ---
+
+{% include_relative subnav-bulma-extensions.html %}
