--- a/bulma-extensions/tooltip.html
+++ b/bulma-extensions/tooltip.html
@@ -1,6 +1,8 @@
 ---
 title: Tooltip
-layout: documentation
+layout: default
 doc-tab: bulma-extensions
 doc-subtab: tooltip
 ---
+
+{% include_relative subnav-bulma-extensions.html %}
