--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 route: index
-title: Wikiki
-subtitle: This page is an access point to my sources
+doc-tab: overview
 ---
 
 <section class="section">
