--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -6,3 +6,10 @@ doc-subtab: overview
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
+
+<section class="section">
+  <div class="container">
+    <h2 class="subtitle">Set of extensions for <a href="http://bulma.io" target="_blank">Bulma.io</a></h2>
+    <p>This section gather all my <a href="http://bulma.io" target="_blank">Bulma.io</a> extensions.</p>
+  </div>
+</section>
