--- a/bulma-extensions/subnav-bulma-extensions.html
+++ b/bulma-extensions/subnav-bulma-extensions.html
@@ -1,40 +1,40 @@
 <nav class="navbar has-shadow">
   <div class="container">
     <div class="navbar-brand">
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'overview' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/overview/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'overview' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/overview">
         Overview
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'badge' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/badge/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'badge' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/badge">
         Badge
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'calendar' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/calendar/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'calendar' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/calendar">
         Calendar
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'checkradio' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/checkradio/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'checkradio' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/checkradio">
         Checkradio
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'divider' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/divider/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'divider' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/divider">
         Divider
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'pageloader' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/pageloader/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'pageloader' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/pageloader">
         Page loader
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'ribbon' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/ribbon/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'ribbon' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/ribbon">
         Ribbon
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'slider' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/slider/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'slider' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/slider">
         Slider
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'steps' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/steps/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'steps' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/steps">
         Steps
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'switch' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/switch/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'switch' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/switch">
         Switch
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'timeline' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/timeline/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'timeline' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/timeline">
         Timeline
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'tooltip' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/tooltip/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'tooltip' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/tooltip">
         Tooltip
       </a>
     </div>
