--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -6,3 +6,18 @@ doc-subtab: calendar
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
+
+<section class="section">
+  <div class="container">
+    <h1 class="title">Switch</h1>
+    <h2 class="subtitle">
+      Display classic <strong>checkbox</strong> as a switch button, in different colors, sizes, and states
+    </h2>
+    {%
+      include meta.html
+      variables=true
+    %}
+
+    <hr>
+  </div>
+</section>
