--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -6,3 +6,20 @@ doc-subtab: checkradio
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
+
+<section class="section">
+  <div class="container">
+    <h1 class="title">Checkradio</h1>
+    <h2 class="subtitle">
+      Make classic <strong>checkbox</strong> and <strong>radio</strong> more sexy in different colors, sizes, and states
+    </h2>
+    {%
+      include meta.html
+      colors=true
+      sizes=true
+      variables=true
+    %}
+
+    <hr>
+  </div>
+</section>
