--- a/bulma-extensions/badge.html
+++ b/bulma-extensions/badge.html
@@ -9,9 +9,9 @@ doc-subtab: badge
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Switch</h1>
+    <h1 class="title">Badge</h1>
     <h2 class="subtitle">
-      Display classic <strong>checkbox</strong> as a switch button, in different colors, sizes, and states
+      Display a <strong>badge</strong> element in front of Bulma's element in different colors. It's useful to display a number of items like notifications or mails.
     </h2>
     {%
       include meta.html
