--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -9,12 +9,13 @@ doc-subtab: calendar
 
 <section class="section">
   <div class="container">
-    <h1 class="title">Switch</h1>
+    <h1 class="title">Calendar</h1>
     <h2 class="subtitle">
-      Display classic <strong>checkbox</strong> as a switch button, in different colors, sizes, and states
+      Display a <strong>calendar</strong> for date selection or for planning management, in different colors, sizes
     </h2>
     {%
       include meta.html
+      sizes=true
       variables=true
     %}
 
