--- a/bulma-extensions/divider.html
+++ b/bulma-extensions/divider.html
@@ -6,3 +6,18 @@ doc-subtab: divider
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
+
+<section class="section">
+  <div class="container">
+    <h1 class="title">Divider</h1>
+    <h2 class="subtitle">
+      Display a vertical or horizontal <strong>divider</strong> to segment your design.
+    </h2>
+    {%
+      include meta.html
+      variables=true
+    %}
+
+    <hr>
+  </div>
+</section>
