--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -11,7 +11,7 @@ doc-subtab: calendar
   <div class="container">
     <h1 class="title">Calendar</h1>
     <h2 class="subtitle">
-      Display a <strong>calendar</strong> for date selection or for planning management, in different colors, sizes
+      Display a <strong>calendar</strong> for date selection or for planning management, in different colors and sizes
     </h2>
     {%
       include meta.html
