--- a/bulma-extensions/pageloader.html
+++ b/bulma-extensions/pageloader.html
@@ -6,3 +6,19 @@ doc-subtab: pageloader
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
+
+<section class="section">
+  <div class="container">
+    <h1 class="title">Page-loader</h1>
+    <h2 class="subtitle">
+      Display a <strong>page-loader</strong> to inform user that application is loading the content, in different colors.
+    </h2>
+    {%
+      include meta.html
+      colors=true
+      variables=true
+    %}
+
+    <hr>
+  </div>
+</section>
