--- a/bulma-extensions/steps.html
+++ b/bulma-extensions/steps.html
@@ -6,3 +6,20 @@ doc-subtab: steps
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
+
+<section class="section">
+  <div class="container">
+    <h1 class="title">Steps</h1>
+    <h2 class="subtitle">
+      Display <strong>steps</strong> for a process (like sign-up, or order, form), in different colors, sizes, and states
+    </h2>
+    {%
+      include meta.html
+      colors=true
+      sizes=true
+      variables=true
+    %}
+
+    <hr>
+  </div>
+</section>
