--- a/bulma-extensions/timeline.html
+++ b/bulma-extensions/timeline.html
@@ -6,3 +6,20 @@ doc-subtab: timeline
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
+
+<section class="section">
+  <div class="container">
+    <h1 class="title">Timeline</h1>
+    <h2 class="subtitle">
+      Display a vertical <strong>timeline</strong>, in different colors, sizes, and states
+    </h2>
+    {%
+      include meta.html
+      colors=true
+      sizes=true
+      variables=true
+    %}
+
+    <hr>
+  </div>
+</section>
