--- a/bulma-extensions/tooltip.html
+++ b/bulma-extensions/tooltip.html
@@ -6,3 +6,18 @@ doc-subtab: tooltip
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
+
+<section class="section">
+  <div class="container">
+    <h1 class="title">Tooltip</h1>
+    <h2 class="subtitle">
+      Display a <strong>tooltip</strong> attached to any kind of element, in different position.
+    </h2>
+    {%
+      include meta.html
+      variables=true
+    %}
+
+    <hr>
+  </div>
+</section>
