--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -13,3 +13,8 @@ doc-subtab: overview
     <p>This section gather all my <a href="http://bulma.io" target="_blank">Bulma.io</a> extensions.</p>
   </div>
 </section>
+
+  {% include anchor.html name="Need an extension ?" %}
+  <div class="content">
+    <p>You are looking for a particular extension but you did not find it yet ? Don't hesitate to send me a request by <a href="https://github.com/Wikiki/wikiki.github.io/issues" target="_blank">opening and issuer</a> on my GitHub repository.</p>
+  </div>
