--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -14,7 +14,8 @@ doc-subtab: overview
     
     {% include anchor.html name="Need an extension ?" %}
     <div class="content">
-      <p>You are looking for a particular extension but you did not find it yet ? Don't hesitate to send me a request by <a href="https://github.com/Wikiki/wikiki.github.io/issues" target="_blank">opening and issuer</a> on my GitHub repository.</p>
+      <p>You are looking for a particular extension but you did not find it yet ?</p>
+      <p>Don't hesitate to send me a request by <a href="https://github.com/Wikiki/wikiki.github.io/issues" target="_blank">opening and issue</a> on my GitHub repository.</p>
     </div>
     
   </div>
