--- a/bulma-extensions/switch.html
+++ b/bulma-extensions/switch.html
@@ -3,7 +3,159 @@ title: Switch
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: switch
+variables:
+- name: $switch-background
+  value: $grey-light
+- name: $switch-background-active
+  value: $primary
+- name: $switch-radius
+  value: $radius
+- name: $switch-margin
+  value: 1rem
+- name: $switch-paddle-background
+  value: $white
+- name: $switch-paddle-offset
+  value: 0.25rem
+- name: $switch-paddle-transition
+  value: all 0.25s ease-out
 ---
+
+{% capture switch_example %}
+<div class="field">
+  <input id="switchExample" type="checkbox" name="switchExample" class="switch">
+  <label for="switchExample">Switch example</label>
+</div>
+{% endcapture %}
+
+{% capture switch_colors_example %}
+<div class="field">
+  <input id="switchColorDefault" type="checkbox" name="switchColorDefault" class="switch">
+  <label for="switchColorDefault">Switch default</label>
+</div>
+
+<div class="field">
+  <input id="switchColorSuccess" type="checkbox" name="switchColorSuccess" class="switch is-success">
+  <label for="switchColorSuccess">Switch success</label>
+</div>
+
+<div class="field">
+  <input id="switchColorWarning" type="checkbox" name="switchColorWarning" class="switch is-warning">
+  <label for="switchColorWarning">Switch warning</label>
+</div>
+
+<div class="field">
+  <input id="switchColorDanger" type="checkbox" name="switchColorDanger" class="switch is-danger">
+  <label for="switchColorDanger">Switch danger</label>
+</div>
+
+<div class="field">
+  <input id="switchColorInfo" type="checkbox" name="switchColorInfo" class="switch is-info">
+  <label for="switchColorInfo">Switch info</label>
+</div>
+{% endcapture %}
+
+{% capture switch_rounded_example %}
+<div class="field">
+  <input id="switchRoundedDefault" type="checkbox" name="switchRoundedDefault" class="switch is-rounded">
+  <label for="switchRoundedDefault">Switch rounded default</label>
+</div>
+
+<div class="field">
+  <input id="switchRoundedSuccess" type="checkbox" name="switchRoundedSuccess" class="switch is-rounded is-success">
+  <label for="switchRoundedSuccess">Switch rounded success</label>
+</div>
+
+<div class="field">
+  <input id="switchRoundedWarning" type="checkbox" name="switchRoundedWarning" class="switch is-rounded is-warning">
+  <label for="switchRoundedWarning">Switch rounded warning</label>
+</div>
+
+<div class="field">
+  <input id="switchRoundedDanger" type="checkbox" name="switchRoundedDanger" class="switch is-rounded is-danger">
+  <label for="switchRoundedDanger">Switch rounded danger</label>
+</div>
+
+<div class="field">
+  <input id="switchRoundedInfo" type="checkbox" name="switchRoundedInfo" class="switch is-rounded is-info">
+  <label for="switchRoundedInfo">Switch rounded info</label>
+</div>
+{% endcapture %}
+
+{% capture switch_outlined_example %}
+<div class="field">
+  <input id="switchOutlinedDefault" type="checkbox" name="switchOutlinedDefault" class="switch is-outlined">
+  <label for="switchOutlinedDefault">Switch outlined default</label>
+</div>
+
+<div class="field">
+  <input id="switchOutlinedSuccess" type="checkbox" name="switchOutlinedSuccess" class="switch is-outlined is-success">
+  <label for="switchOutlinedSuccess">Switch outlined success</label>
+</div>
+
+<div class="field">
+  <input id="switchOutlinedWarning" type="checkbox" name="switchOutlinedWarning" class="switch is-outlined is-warning">
+  <label for="switchOutlinedWarning">Switch outlined warning</label>
+</div>
+
+<div class="field">
+  <input id="switchOutlinedDanger" type="checkbox" name="switchOutlinedDanger" class="switch is-outlined is-danger">
+  <label for="switchOutlinedDanger">Switch outlined danger</label>
+</div>
+
+<div class="field">
+  <input id="switchOutlinedInfo" type="checkbox" name="switchOutlinedInfo" class="switch is-outlined is-info">
+  <label for="switchOutlinedInfo">Switch outlined info</label>
+</div>
+{% endcapture %}
+
+{% capture switch_rounded_outlined_example %}
+<div class="field">
+  <input id="switchRoundedOutlinedDefault" type="checkbox" name="switchRoundedOutlinedDefault" class="switch is-rounded is-outlined">
+  <label for="switchRoundedOutlinedDefault">Switch rounded outlined default</label>
+</div>
+
+<div class="field">
+  <input id="switchRoundedOutlinedSuccess" type="checkbox" name="switchRoundedOutlinedSuccess" class="switch is-rounded is-outlined is-success">
+  <label for="switchRoundedOutlinedSuccess">Switch rounded outlined success</label>
+</div>
+
+<div class="field">
+  <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning">
+  <label for="switchRoundedOutlinedWarning">Switch rounded outlined warning</label>
+</div>
+
+<div class="field">
+  <input id="switchRoundedOutlinedDanger" type="checkbox" name="switchRoundedOutlinedDanger" class="switch is-rounded is-outlined is-danger">
+  <label for="switchRoundedOutlinedDanger">Switch rounded outlined danger</label>
+</div>
+
+<div class="field">
+  <input id="switchRoundedOutlinedInfo" type="checkbox" name="switchRoundedOutlinedInfo" class="switch is-rounded is-outlined is-info">
+  <label for="switchRoundedOutlinedInfo">Switch rounded outlined info</label>
+</div>
+{% endcapture %}
+
+{% capture switch_sizes_example %}
+<div class="field">
+  <input id="switchSmall" type="checkbox" name="switchSmall" class="switch is-small">
+  <label for="switchSmall">Switch small</label>
+</div>
+
+<div class="field">
+  <input id="switchNormal" type="checkbox" name="switchNormal" class="switch">
+  <label for="switchNormal">Switch</label>
+</div>
+
+<div class="field">
+  <input id="switchMedium" type="checkbox" name="switchMedium" class="switch is-medium">
+  <label for="switchMedium">Switch medium</label>
+</div>
+
+<div class="field">
+  <input id="switchLarge" type="checkbox" name="switchLarge" class="switch is-large">
+  <label for="switchLarge">Switch large</label>
+</div>
+{% endcapture %}
 
 {% include_relative subnav-bulma-extensions.html %}
 
@@ -21,5 +173,28 @@ doc-subtab: switch
     %}
 
     <hr>
+
+    {% include anchor.html name="Colors" %}
+    <div class="columns">
+      <div class="column">
+        {{switch_colors_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{switch_colors_example}}{% endhighlight %}
+      </div>
+    </div>
+
+    {% include anchor.html name="Sizes" %}
+
+    <div class="columns">
+      <div class="column">
+        {{switch_sizes_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{switch_sizes_example}}{% endhighlight %}
+      </div>
+    </div>
+
+    {% include variables.html %}
   </div>
 </div>
