--- a/bulma-extensions/switch.html
+++ b/bulma-extensions/switch.html
@@ -22,115 +22,115 @@ variables:
 
 {% capture switch_example %}
 <div class="field">
-  <input id="switchExample" type="checkbox" name="switchExample" class="switch">
+  <input id="switchExample" type="checkbox" name="switchExample" class="switch" checked="checked">
   <label for="switchExample">Switch example</label>
 </div>
 {% endcapture %}
 
 {% capture switch_colors_example %}
 <div class="field">
-  <input id="switchColorDefault" type="checkbox" name="switchColorDefault" class="switch">
+  <input id="switchColorDefault" type="checkbox" name="switchColorDefault" class="switch" checked="checked">
   <label for="switchColorDefault">Switch default</label>
 </div>
 
 <div class="field">
-  <input id="switchColorSuccess" type="checkbox" name="switchColorSuccess" class="switch is-success">
+  <input id="switchColorSuccess" type="checkbox" name="switchColorSuccess" class="switch is-success" checked="checked">
   <label for="switchColorSuccess">Switch success</label>
 </div>
 
 <div class="field">
-  <input id="switchColorWarning" type="checkbox" name="switchColorWarning" class="switch is-warning">
+  <input id="switchColorWarning" type="checkbox" name="switchColorWarning" class="switch is-warning" checked="checked">
   <label for="switchColorWarning">Switch warning</label>
 </div>
 
 <div class="field">
-  <input id="switchColorDanger" type="checkbox" name="switchColorDanger" class="switch is-danger">
+  <input id="switchColorDanger" type="checkbox" name="switchColorDanger" class="switch is-danger" checked="checked">
   <label for="switchColorDanger">Switch danger</label>
 </div>
 
 <div class="field">
-  <input id="switchColorInfo" type="checkbox" name="switchColorInfo" class="switch is-info">
+  <input id="switchColorInfo" type="checkbox" name="switchColorInfo" class="switch is-info" checked="checked">
   <label for="switchColorInfo">Switch info</label>
 </div>
 {% endcapture %}
 
 {% capture switch_rounded_example %}
 <div class="field">
-  <input id="switchRoundedDefault" type="checkbox" name="switchRoundedDefault" class="switch is-rounded">
+  <input id="switchRoundedDefault" type="checkbox" name="switchRoundedDefault" class="switch is-rounded" checked="checked">
   <label for="switchRoundedDefault">Switch rounded default</label>
 </div>
 
 <div class="field">
-  <input id="switchRoundedSuccess" type="checkbox" name="switchRoundedSuccess" class="switch is-rounded is-success">
+  <input id="switchRoundedSuccess" type="checkbox" name="switchRoundedSuccess" class="switch is-rounded is-success" checked="checked">
   <label for="switchRoundedSuccess">Switch rounded success</label>
 </div>
 
 <div class="field">
-  <input id="switchRoundedWarning" type="checkbox" name="switchRoundedWarning" class="switch is-rounded is-warning">
+  <input id="switchRoundedWarning" type="checkbox" name="switchRoundedWarning" class="switch is-rounded is-warning" checked="checked">
   <label for="switchRoundedWarning">Switch rounded warning</label>
 </div>
 
 <div class="field">
-  <input id="switchRoundedDanger" type="checkbox" name="switchRoundedDanger" class="switch is-rounded is-danger">
+  <input id="switchRoundedDanger" type="checkbox" name="switchRoundedDanger" class="switch is-rounded is-danger" checked="checked">
   <label for="switchRoundedDanger">Switch rounded danger</label>
 </div>
 
 <div class="field">
-  <input id="switchRoundedInfo" type="checkbox" name="switchRoundedInfo" class="switch is-rounded is-info">
+  <input id="switchRoundedInfo" type="checkbox" name="switchRoundedInfo" class="switch is-rounded is-info" checked="checked">
   <label for="switchRoundedInfo">Switch rounded info</label>
 </div>
 {% endcapture %}
 
 {% capture switch_outlined_example %}
 <div class="field">
-  <input id="switchOutlinedDefault" type="checkbox" name="switchOutlinedDefault" class="switch is-outlined">
+  <input id="switchOutlinedDefault" type="checkbox" name="switchOutlinedDefault" class="switch is-outlined" checked="checked">
   <label for="switchOutlinedDefault">Switch outlined default</label>
 </div>
 
 <div class="field">
-  <input id="switchOutlinedSuccess" type="checkbox" name="switchOutlinedSuccess" class="switch is-outlined is-success">
+  <input id="switchOutlinedSuccess" type="checkbox" name="switchOutlinedSuccess" class="switch is-outlined is-success" checked="checked">
   <label for="switchOutlinedSuccess">Switch outlined success</label>
 </div>
 
 <div class="field">
-  <input id="switchOutlinedWarning" type="checkbox" name="switchOutlinedWarning" class="switch is-outlined is-warning">
+  <input id="switchOutlinedWarning" type="checkbox" name="switchOutlinedWarning" class="switch is-outlined is-warning" checked="checked">
   <label for="switchOutlinedWarning">Switch outlined warning</label>
 </div>
 
 <div class="field">
-  <input id="switchOutlinedDanger" type="checkbox" name="switchOutlinedDanger" class="switch is-outlined is-danger">
+  <input id="switchOutlinedDanger" type="checkbox" name="switchOutlinedDanger" class="switch is-outlined is-danger" checked="checked">
   <label for="switchOutlinedDanger">Switch outlined danger</label>
 </div>
 
 <div class="field">
-  <input id="switchOutlinedInfo" type="checkbox" name="switchOutlinedInfo" class="switch is-outlined is-info">
+  <input id="switchOutlinedInfo" type="checkbox" name="switchOutlinedInfo" class="switch is-outlined is-info" checked="checked">
   <label for="switchOutlinedInfo">Switch outlined info</label>
 </div>
 {% endcapture %}
 
 {% capture switch_rounded_outlined_example %}
 <div class="field">
-  <input id="switchRoundedOutlinedDefault" type="checkbox" name="switchRoundedOutlinedDefault" class="switch is-rounded is-outlined">
+  <input id="switchRoundedOutlinedDefault" type="checkbox" name="switchRoundedOutlinedDefault" class="switch is-rounded is-outlined" checked="checked">
   <label for="switchRoundedOutlinedDefault">Switch rounded outlined default</label>
 </div>
 
 <div class="field">
-  <input id="switchRoundedOutlinedSuccess" type="checkbox" name="switchRoundedOutlinedSuccess" class="switch is-rounded is-outlined is-success">
+  <input id="switchRoundedOutlinedSuccess" type="checkbox" name="switchRoundedOutlinedSuccess" class="switch is-rounded is-outlined is-success" checked="checked">
   <label for="switchRoundedOutlinedSuccess">Switch rounded outlined success</label>
 </div>
 
 <div class="field">
-  <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning">
+  <input id="switchRoundedOutlinedWarning" type="checkbox" name="switchRoundedOutlinedWarning" class="switch is-rounded is-outlined is-warning" checked="checked">
   <label for="switchRoundedOutlinedWarning">Switch rounded outlined warning</label>
 </div>
 
 <div class="field">
-  <input id="switchRoundedOutlinedDanger" type="checkbox" name="switchRoundedOutlinedDanger" class="switch is-rounded is-outlined is-danger">
+  <input id="switchRoundedOutlinedDanger" type="checkbox" name="switchRoundedOutlinedDanger" class="switch is-rounded is-outlined is-danger" checked="checked">
   <label for="switchRoundedOutlinedDanger">Switch rounded outlined danger</label>
 </div>
 
 <div class="field">
-  <input id="switchRoundedOutlinedInfo" type="checkbox" name="switchRoundedOutlinedInfo" class="switch is-rounded is-outlined is-info">
+  <input id="switchRoundedOutlinedInfo" type="checkbox" name="switchRoundedOutlinedInfo" class="switch is-rounded is-outlined is-info" checked="checked">
   <label for="switchRoundedOutlinedInfo">Switch rounded outlined info</label>
 </div>
 {% endcapture %}
@@ -174,6 +174,18 @@ variables:
 
     <hr>
 
+    <div class="columns">
+      <div class="column">
+        {{switch_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{switch_example}}{% endhighlight %}
+      </div>
+    </div>
+    <div class="notification is-danger has-text-centered">
+      <p>Please note that due to <strong>CSS limitation</strong> the structure of the checkbox is different of the one provided by Bulma core.<br /><i>(Input is not wrapped by the label)</i></p>
+    </div>
+
     {% include anchor.html name="Colors" %}
     <div class="columns">
       <div class="column">
@@ -192,6 +204,39 @@ variables:
       </div>
       <div class="column">
         {% highlight html %}{{switch_sizes_example}}{% endhighlight %}
+      </div>
+    </div>
+
+    <hr>
+
+    <h3 class="title">Styles</h3>
+    <h4 class="subtitle">Rounded</h4>
+    <div class="columns">
+      <div class="column">
+        {{switch_rounded_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{switch_rounded_example}}{% endhighlight %}
+      </div>
+    </div>
+
+    <h4 class="subtitle">Outlined</h4>
+    <div class="columns">
+      <div class="column">
+        {{switch_outlined_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{switch_outlined_example}}{% endhighlight %}
+      </div>
+    </div>
+
+    <h4 class="subtitle">Mixed</h4>
+    <div class="columns">
+      <div class="column">
+        {{switch_rounded_outlined_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{switch_rounded_outlined_example}}{% endhighlight %}
       </div>
     </div>
 
