--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -37,7 +37,7 @@ variables:
 
 <div class="field">
   <input class="is-checkbox is-warning" id="exampleCheckboxWarning" type="checkbox" name="exampleCheckboxWarning" checked="checked">
-  <label for="exampleCheckboxWarning">Checkbox - large - warning</label>
+  <label for="exampleCheckboxWarning">Checkbox - warning</label>
 </div>
 
 <div class="field">
@@ -167,6 +167,8 @@ variables:
         {% highlight html %}{{checkradio_colors_circle_example}}{% endhighlight %}
       </div>
     </div>
+
+    <hr>
 
     <h3 class="title">States</h3>
     <h4 class="subtitle">Disabled</h4>
