--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -9,15 +9,14 @@ doc-subtab: overview
 
 <section class="section">
   <div class="container">
-    <h2 class="subtitle">Set of extensions for <a href="http://bulma.io" target="_blank">Bulma.io</a></h2>
-    <p>This section gather all my <a href="http://bulma.io" target="_blank">Bulma.io</a> extensions.</p>
+    <h2 class="subtitle">This section gather all my <a href="http://bulma.io" target="_blank">Bulma.io</a> extensions.</h2>
 
     {% include anchor.html name="Integration" %}
     <div class="content">
       <p>This is an example with the Switch extension.</p>
       <ul>
         <li>Clone the [bulma repo](https://github.com/jgthms/bulma)</li>
-        <li>Under the `sass` folder, create a new folder called <span class="tag">extensions</span></li>
+        <li>Under the <span class="tag">sass</span> folder, create a new folder called <span class="tag">extensions</span></li>
         <li>In this new folder, create a new file <span class="tag">switch.sass</span></li>
         <li>Copy the code form the <span class="tag">bulma-switch repo</p>'s [switch.sass](https://github.com/Wikiki/bulma-switch/blob/master/switch.sass) file into your new file</li>
         <li>In the same folder create a new file <span class="tag">_all.sass</span> (this is not required, but will help when you add more extensions)</li>
