--- a/bulma-extensions/subnav-bulma-extensions.html
+++ b/bulma-extensions/subnav-bulma-extensions.html
@@ -17,7 +17,7 @@
         Divider
       </a>
       <a class="navbar-item is-tab {% if page.doc-subtab == 'pageloader' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/pageloader">
-        Page loader
+        Page-loader
       </a>
       <a class="navbar-item is-tab {% if page.doc-subtab == 'ribbon' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/ribbon">
         Ribbon
