Add divider page

--- a/bulma-extensions/badge.html
+++ b/bulma-extensions/badge.html
@@ -59,7 +59,7 @@ variables:
   <div class="container">
     <h1 class="title">Badge</h1>
     <h2 class="subtitle">
-      Display a <strong>badge</strong> element in front of Bulma's element in different colors. It's useful to display a number of items like notifications or mails.
+      Display a <strong>badge</strong> element in front of Bulma's element in different colors.<br />It's useful, for example, to display a number of items like notifications or mails.
     </h2>
     {%
       include meta.html
