Fix pageloader text

--- a/bulma-extensions/pageloader.html
+++ b/bulma-extensions/pageloader.html
@@ -15,7 +15,7 @@ doc-subtab: pageloader
   <div class="container">
     <h1 class="title">Page-loader</h1>
     <h2 class="subtitle">
-      Display a <strong>page-loader</strong> to inform user that application is loading the content, in different colors.
+      Display a <strong>page-loader</strong> to inform user that content is loading, in different colors.
     </h2>
     {%
       include meta.html
